fixing white space issuer beneath image

--- a/server/app/sass/_landingpage.scss
+++ b/server/app/sass/_landingpage.scss
@@ -100,7 +100,7 @@ body {
   position: relative;
   top: -165px;
   padding: 15px 0 5px;
-  margin: 15px 60px 350px;
+  margin: -16px 60px 320px;
 }
 
 p {
